:bug: Unstuck the logo

--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ header .menu {
 }
 header .menu .logo {
   width: 77px;
+  margin-left: 2vw;
+  margin-top: 2vw;
 }
 header .menu .search {
   align-items: center;
